--- a/458project/homepage.css
+++ b/458project/homepage.css
@@ -1,32 +1,61 @@
 
+hr
+{
+	color:#aceace;
+}
+
 input
 {
-	float:right;
- 	
- 	border:none;
-	background-color: #aceace;
+	float:right;	
+	border:1px solid #FFFFFF;
 	padding: 10px 20px;
-	text-align; center;
+	
+}
+
+button
+{
+	background-color: #aceace;
+	padding: 8px;
 	cursor:pointer;
 }
 
+.titlebar
+{
+	z-index:2;
+	
+}
 
+.titlebar a
+{
+	margin-top:15px;
+	text-align:center;
+	margin-bottom:15px;
+	font-size:35px;
+	color:#aceace;
+	text-decoration: none;
+	padding: 5px 5px 5px 5px;
+	display:block;
+}
+
+.titlebar a:hover
+{
+	color:#f1f1f1;
+}
+	
 .groupbar
 {
 	height: 100%;
 	width: 135px;
 	position:fixed;
 	z-index: 1;
-	top: 3;
-	left: 1;
 	overflow-x: hidden;
 	padding-top; 15%;
 	border-right: 2px solid #aceace;
-	
 }
 
 .groupbar a
 {
+	margin-top: 8%;
 	padding: 6px 7px 6px 16px;
 	text-decoration: none;
 	font-size: 25px;
@@ -39,28 +68,66 @@ input
 	color:#f1f1f1;
 }
 
+.memberbar
+{
+	height: 100%;
+	width: 100px;
+	position:fixed;
+	z-index:2;
+	top:96px;
+ 	right:0px;	
+	float:right;
+	overflow-x:hidden;
+	padding-right:20px;
+	padding-left:15px;
+	border-left: 2px solid #aceace;
+	text-align:right;
+	background-color:#837e87;
+}
+
+.memberbar a
+{
+	margin-top: 8%;
+	padding: 6px 7px 6px 16px;
+	text-decoration: none;
+	font-size: 25px;
+	color:#aceace;
+	display:block;	
+}
+
+.memberbar a:hover
+{
+	color:#f1f1f1;
+}
+
+
 .main
 {
 	margin-left: 150px;
-	padding: 0px 15px;	
-	background-color:#edebeb;
+	margin-right: 120px;
+	padding-left: 70px;	
+	padding-top: 70px;
+	padding-right:70px;
+	padding-bottom: 70px;
 	z-index:0;
-	font-family:"Lucida Console", Monaco, monospace;
+	font-family:"Palatino Linotype", "Book Antique", Palatino, serif;
 	font-size: 10pt;
 }
 
 .chatbar
 {
 	height:122px;
-	width:100%;
-	position:fixed;
+	width:50%;
+	position:absolute;
+	margin-left:145px;
 	bottom:0;
 	left:0;
 	right:0;
-	z-index:0;
+	z-index:1;
 	background-color:#FFFFFF;
 	border-top:2px solid #aceace;
-			
+	overflow-y:scroll;
+	
 }
 
 body
@@ -74,3 +141,13 @@ h1
 	color: #aceace;
 	
 }
+
+.chatBox
+{
+	z-index:2;
+	position:fixed;
+	margin-top:86px;
+	margin-right:0;	
+		
+}
+
