Trying to get stuff to work on page, works on popup

--- a/458project/calendar.css
+++ b/458project/calendar.css
@@ -3,7 +3,7 @@
 *:after {
   box-sizing: border-box;
 }
-body {
+#calcont {
   overflow: hidden;
   font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-weight: 100;
