--- a/458project/homepage.css
+++ b/458project/homepage.css
@@ -4,13 +4,6 @@ hr
 	color:#aceace;
 }
 
-input
-{
-	//float:right;	
-	border:1px solid #FFFFFF;
-	padding: 10px 20px;
-	
-}
 
 #chatTextInput
 {
@@ -27,6 +20,13 @@ input
     position: fixed;
     top: 2em;
     left: 2em;
+}
+
+#logoutBtn
+{
+    position: fixed;
+    top: 2em;
+    right: 2em;
 }
 
 #slideChatBtn
@@ -254,6 +254,18 @@ h3
 }
 
 #contents
+{
+    position:relative;
+    margin-top: 6em;
+    margin-bottom:4em;
+    //height:60em;
+    width:70%;
+    margin-left:auto;
+    margin-right:auto;
+    overflow-y:auto;
+}
+
+#contents2
 {
     position:relative;
     margin-top: 6em;
