--- a/458project/homepage.css
+++ b/458project/homepage.css
@@ -1,15 +1,14 @@
-
 hr
 {
-	color:#aceace;
+    color:#aceace;
 }
 
 
 #chatTextInput
 {
-	//float:right;	
-	border:2px solid #aceace;
-	padding: 10px;
+    //float:right;  
+    border:2px solid #aceace;
+    padding: 10px;
     margin-left: 20px;
     margin-right: 20px;
     width:94%;
@@ -46,6 +45,7 @@ hr
 #selectDiv
 {
     text-align:center;
+    margin-left:20px;
 }
 
 #projList
@@ -53,20 +53,33 @@ hr
     font-size: large;
 }
 
+.calendar
+{
+
+
+    
+    border: none;
+    top:21px;
+    width:250px;
+    height:50px;
+    z-index:2;
+    
+}
+
 button
 {
-	background-color: #aceace;
-	padding: 8px;
-	cursor:pointer;
+    background-color: #aceace;
+    padding: 8px;
+    cursor:pointer;
     border: none;
     color: white;
 }
 
 .fbtn
 {
-	background-color: #aceace;
-	padding: 8px;
-	cursor:pointer;
+    background-color: #aceace;
+    padding: 8px;
+    cursor:pointer;
     border: none;
     color: white;
 }
@@ -79,9 +92,9 @@ button
 
 .titlebar
 {
-	z-index:2;
-	background-color:#837e87;
-	font-family: "Palatino Linotype", "Book Antique", Palatino, serif;
+    z-index:2;
+    background-color:#837e87;
+    font-family: "Palatino Linotype", "Book Antique", Palatino, serif;
     position: fixed;
     width:100%;
     top:0;
@@ -92,164 +105,170 @@ button
 #footer
 {
     position: fixed;
-    height:2em;
+    height:2.4em;
     width:100%;
     left:0;
     right:0;
     bottom: 0;
-	z-index:3;
-	background-color:#837e87;
+    z-index:3;
+    background-color:#837e87;
 }
 
 .titlebar a
 {
-	margin-top:15px;
-	text-align:center;
-	margin-bottom:15px;
-	font-size:35px;
-	color:#aceace;
-	text-decoration: none;
-	padding: 5px 5px 5px 5px;
-	display:block;
+    margin-top:15px;
+    text-align:center;
+    margin-bottom:15px;
+    font-size:35px;
+    color:#aceace;
+    text-decoration: none;
+    padding: 5px 5px 5px 5px;
+    display:block;
 }
 
 .titlebar a:hover
 {
-	color:#f1f1f1;
+    color:#f1f1f1;
 }
-	
+    
 #groupbar
 {
-	height: 100%;
-	width: auto;
+    height: 100%;
+    width: auto;
     top:4em;
     left:0;
     bottom:0;
-	position:fixed;
-	z-index: 1;
-	overflow-x: hidden;
-	//padding-top; 15%;
-	border-right: 2px solid #aceace;
+    position:fixed;
+    z-index: 1;
+    overflow-x: hidden;
+    //padding-top; 15%;
+    border-right: 2px solid #aceace;
     //text-align: center;
-	background-color:#837e87;
+    background-color:#837e87;
 }
 
 #groupbar a
 {
-	//margin-top: 8%;
-	//padding: 6px 7px 6px 16px;
-	padding: 6px 20px 6px 20px;
-	text-decoration: none;
-	font-size: 25px;
-	color:#aceace;
-	display:block;
+    //margin-top: 8%;
+    //padding: 6px 7px 6px 16px;
+    padding: 6px 20px 6px 20px;
+    text-decoration: none;
+    font-size: 25px;
+    color:#aceace;
+    display:block;
 }
 
 #groupbar a:hover
 {
-	color:#f1f1f1;
+    color:#f1f1f1;
 }
 
 .memberbar
 {
-	height: 100%;
-	width: 100px;
-	position:fixed;
-	z-index:2;
-	top:96px;
- 	right:0px;	
-	float:right;
-	overflow-x:hidden;
-	padding-right:20px;
-	padding-left:15px;
-	border-left: 2px solid #aceace;
-	text-align:right;
-	background-color:#837e87;
+    height: 100%;
+    width: 98px;
+    position:fixed;
+    z-index:2;
+    top:96px;
+    right:0px;  
+    float:right;
+    overflow-x:hidden;
+    padding-right:20px;
+    padding-left:15px;
+    border-left: 2px solid #aceace;
+    text-align:right;
+    background-color:#837e87;
 }
 
 .memberbar a
 {
-	margin-top: 8%;
-	padding: 6px 7px 6px 16px;
-	text-decoration: none;
-	font-size: 25px;
-	color:#aceace;
-	display:block;	
+    margin-top: 8%;
+    padding: 6px 7px 6px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color:#aceace;
+    display:block;  
 }
 
 .memberbar a:hover
 {
-	color:#f1f1f1;
+    color:#f1f1f1;
 }
 
 
 .main
 {
-	//margin-left: 150px;
-	//margin-right: 120px;
-	//padding-left: 70px;	
-	//padding-top: 70px;
-	//padding-right:70px;
-	//padding-bottom: 70px;
-	z-index:0;
-	font-family:"Palatino Linotype", "Book Antique", Palatino, serif;
-	font-size: 10pt;
+    //margin-left: 150px;
+    //margin-right: 120px;
+    //padding-left: 70px;   
+    //padding-top: 70px;
+    //padding-right:70px;
+    //padding-bottom: 70px;
+    z-index:0;
+    font-family:"Palatino Linotype", "Book Antique", Palatino, serif;
+    font-size: 10pt;
 }
 
 #chatbar
 {
-	//height:200px;
+    //height:200px;
     height:23em;
-	//width:50%;
-	position:fixed;
-	//margin-left:145px;
-	bottom:2em;
-	left:0;
-	right:0;
-	z-index:2;
-	background-color:#FCFCFC;
-	border-top:2px solid #aceace;
+    //width:50%;
+    position:fixed;
+    //margin-left:145px;
+    bottom:2em;
+    left:0;
+    right:0;
+    z-index:2;
+    background-color:#FCFCFC;
+    border-top:2px solid #aceace;
 }
 
 /*
 #chatBox
 {
-	//height:200px;
+    //height:200px;
     height:22em;
-	width:50%;
-	position:absolute;
-	bottom:0;
-	left:0;
-	right:0;
-	z-index:1;
-	background-color:#FFFFFF;
-	border-top:2px solid #aceace;
-	
+    width:50%;
+    position:absolute;
+    bottom:0;
+    left:0;
+    right:0;
+    z-index:1;
+    background-color:#FFFFFF;
+    border-top:2px solid #aceace;
+    
 }
 */
 
 body
 {
-	//background-color:#837e87;
-	//font-family: "Palatino Linotype", "Book Antique", Palatino, serif;
+    background-color:#69656d;
+//  font-family: "Palatino Linotype", "Book Antique", Palatino, serif;
 }
 
 h1
 {
-	//margin-left: 20px;
-	color: #aceace;
-	
+
+    text-align:center;
+    margin-left: 20px;
+
+    //margin-left: 20px;
+
+    color: #aceace;
+    
 }
 
 h3
 {
     color: #aceace;
+    margin-left: 3%;
 }
 
 #chatLog
 {
     height:19em;
-	overflow-y:auto;
+    overflow-y:auto;
     padding-left:20px;
 }
 
@@ -263,6 +282,8 @@ h3
     margin-left:auto;
     margin-right:auto;
     overflow-y:auto;
+    word-wrap:break-word;
+
 }
 
 #contents2
@@ -277,11 +298,23 @@ h3
     overflow-y:auto;
 }
 
-/*.chatBox
+
+#slideChatBtn
 {
-	z-index:2;
-	position:fixed;
-	margin-top:86px;
-	margin-right:0;	
-}*/
+//  left: 5px;
+    right: 2em;
+    bottom: 5px;
+   
+}
+
+#contents h2
+{
+    color:#aceace;
+    margin-left:3%;
+}
+
+#contents p
+{
+    color:#aceace;
+}   
 
